# tarzi

./: .gitignore  .readthedocs.yaml  AGENTS.md  BUILD_STATUS.md  CHANGELOG.md  COMPILATION_FIXES_SUMMARY.md  Cargo.toml  DEVELOPMENT.md  FINAL_TEST_COVERAGE_SUMMARY.md  Makefile  OPTIMIZATION_SUMMARY.md  PYTHON_SETUP_GUIDE.md  README.md  README_WEBDRIVER_INTEGRATION.md  TEST_COVERAGE_REPORT.md  WORKFLOW_TEST_RESULTS.md  duckduckgo-test-fix-summary.md  pyproject.toml  tarsier.toml  tarzi.toml  tarzi.toml.example  test_coverage_analysis.md  test_manual_analysis.py  test_python_bindings.py
.cursor/rules/: basics.mcd  engines.mcd
.github/workflows/: code-format.yml  doc-build.yml  eval-dist.yml  publish.yml  python-ci.yml  rust-ci.yml
api/: README.md
api/spec/: README.md  SUMMARY.md  api-overview.md  authentication.md  data-models.md  error-handling.md  rate-limiting.md
api/spec/endpoints/: images.md  news.md  search.md
docs/: INTEGRATION_TESTS.md  Makefile  README.md  conf.py  configuration.rst  development.rst  index.rst  installation.rst  overview.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/examples/: api_search.rst  index.rst
docs/python_api/: index.rst
docs/rust_api/: index.rst
docs/user_guide/: index.rst
examples/: basic_usage.py  basic_usage.rs  browser_driver_usage.rs  config_test.rs  enhanced_demo.py  enhanced_features.py  search_engine_brave.rs  search_engine_default.rs  search_engines.py  search_engines.rs  search_parser_usage.rs  simple_usage.rs  sogou_weixin_search.py  sogou_weixin_search.rs
mcp/: .gitignore  DEPLOYMENT.md  Dockerfile  MCP_OPTIMIZATION_SUMMARY.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  start-server.sh  test_browser_docker.py  test_demo.py
mcp/firefox-config/: prefs.js
mcp/tarzi_mcp_server/: __init__.py  browser_config.py  client.py  server.py
python/tarzi/: __init__.py  __main__.py  fetcher.py  searcher.py
src/: config.rs  constants.rs  converter.rs  error.rs  fetcher.rs  lib.rs  main.rs  python.rs  search.rs  utils.rs
src/fetcher/: browser.rs  driver.rs  external.rs  mod.rs  tests.rs  types.rs  webfetcher.rs
src/parser/: baidu.rs  base.rs  brave.rs  custom.rs  duckduckgo.rs  google.rs  mod.rs  tests.rs
src/search/: api.rs  engine.rs  mod.rs  providers.rs  tests.rs  types.rs
src/search/parser/: README.md  baidu.rs  base.rs  bing.rs  brave.rs  custom.rs  duckduckgo.rs  exa.rs  google.rs  mod.rs  searchapi.rs  sogou_weixin.rs  tavily.rs  tests.rs  travily.rs
src/search/providers/: baidu.rs  bing.rs  brave.rs  duckduckgo.rs  exa.rs  google.rs  mod.rs  travily.rs
tarzi/: Cargo.toml  Makefile  README.md  pyproject.toml  tarzi.toml
tarzi/examples/: browser_driver_usage.rs  search_engines.py  search_parser_usage.rs
tarzi/python/tarzi/: __init__.py  __main__.py
tarzi/rust/src/: constants.rs  python.rs  utils.rs
tarzi/rust/src/fetcher/: mod.rs
tarzi/rust/src/search/: mod.rs  stealth.rs  tests.rs
tarzi/rust/src/search/parser/: base.rs  bing.rs
tarzi/rust/src/search/providers/: google.rs  travily.rs
tarzi/src/: error.rs
tarzi/src/fetcher/: types.rs  webfetcher.rs
tarzi/src/search/: engine.rs
tarzi/src/search/parser/: README.md  duckduckgo.rs
tarzi/src/search/providers/: baidu.rs  exa.rs  mod.rs
tarzi/tests/: autoswitch_integration_tests.rs  comprehensive_integration_tests.rs  proxy_integration_tests.rs  search_parser_integration_tests.rs
tarzi/tests/python/: README.md
tarzi/tests/python/integration/: test_api_providers.py  test_autoswitch.py  test_error_handling.py  test_search_engine.py  test_web_fetcher.py
tarzi/tests/python/unit/: test_config.py  test_config_priorities.py  test_converter.py  test_html_pipeline.py  test_proxy_config.py  test_updated_config.py
tests/: README.md  api_search_integration_tests.rs  autoswitch_integration_tests.rs  browser_integration_tests.rs  comprehensive_integration_tests.rs  driver_integration_tests.rs  driver_types_unit_tests.rs  external_browser_integration_tests.rs  fetcher_integration_tests.rs  performance_integration_tests.rs  proxy_integration_tests.rs  search_integration_tests.rs  search_parser_integration_tests.rs
tests/python/: conftest.py  test_config.py  test_config_priorities.py  test_proxy_config.py  test_updated_config.py
tests/python/integration/: search_engine_integration_test.py  test_api_providers.py  test_autoswitch.py  test_error_handling.py  test_search_engine.py  test_web_fetcher.py  web_fetcher_integration_test.py
tests/python/unit/: test_config.py  test_config_priorities.py  test_converter.py  test_html_pipeline.py  test_proxy_config.py  test_updated_config.py
