[package]
name = "tarzi"
version = "0.1.4"
edition = "2024"
authors = ["Xiaming Chen <chenxm35@gmail.com>"]
description = "Rust-native lite search for AI applications"
license = "Apache-2.0"
repository = "https://github.com/mirasurf/tarzi"
keywords = ["search", "web-crawler", "AI", "RAG"]
categories = ["web-programming", "api-bindings", "text-processing"]

[[bin]]
name = "tarzi"
path = "src/main.rs"

[lib]
name = "tarzi"
crate-type = ["cdylib", "rlib"]

[features]
default = []
pyo3 = ["dep:pyo3"]
test-helpers = []
proxy-integration-tests = []

[dependencies]
# Core dependencies
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"

# Web scraping and browser automation
thirtyfour = "0.35"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
url = "2.5"
urlencoding = "2.1"
select = "0.6"

# HTML and Markdown processing
html2md = "0.2.15"
pulldown-cmark = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"

# Python bindings
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }

# Additional utilities
futures = "0.3"
async-trait = "0.1"
regex = "1.11"
toml = "0.8"
tempfile = "3.20"
which = "6.0"

[dev-dependencies]
tokio-test = "0.4" 
