[project]
name = "tarzi"
version = "0.1.6"
requires-python = ">=3.10"
keywords = ["web-scraping", "search-engine", "ai-tools", "rust", "browser-automation"]
description = "Rust-native lite search for AI applications"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Xiaming Chen", email = "chenxm35@gmail.com"},
]
maintainers = [
    {name = "Xiaming Chen", email = "chenxm35@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/mirasurf/tarzi"
Documentation = "https://tarzi.readthedocs.io/"
Repository = "https://github.com/mirasurf/tarzi"

[project.optional-dependencies]
dev = [
    "maturin>=1.5,<2.0",
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.21,<0.25",
    "pytest-cov>=0.6",
    "pytest-mock>=0.1.0",
    'docopt>=0.6.2',
    'patchelf>=0.17.2.0; sys_platform == "linux"',
    "black>=23.12,<25",
    "ruff>=0.3,<0.6",
    "isort>=5.13,<6",
    "autoflake>=2.2,<3",
    "twine>=4.0,<6",
    "build>=1.0,<2",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=2.0.0",
    "sphinx-tabs>=3.4.1",
    "sphinx-design>=0.5.0",
    "furo>=2023.9.10",
    "sphinx-autoapi>=3.0.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tarzi"
strip = true
bindings = "pyo3"
python-source = "python"

[tool.cibuildwheel]
skip = "*-musllinux_*"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }

[project.scripts]
pytarzi = "tarzi.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = ["-v", "--tb=short"]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that require external services",
    "slow: Tests that are slow to run",
    "network: Tests that require network access",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true 

[tool.uv]
python-preference = "system"
resolution = "lowest-direct"
