[project]
name = "tarzi-mcp-server"
version = "0.1.0"
description = "MCP server for Tarzi search functionality"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.0",
    "tarzi>=0.0.13",
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
tarzi-mcp-server = "tarzi_mcp_server.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"