[project]
name = "tarzi-mcp-server"
version = "0.1.0"
description = "MCP server for Tarzi search functionality with headless browser support"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.0",
    "tarzi>=0.0.15",
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-selenium>=4.0.0",
    "pytest-playwright>=0.4.0",
]

browser = [
    "selenium>=4.15.0",
    "playwright>=1.40.0",
    "webdriver-manager>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
tarzi-mcp-server = "tarzi_mcp_server.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"